tests/NormalTests/paczka1/fuzzy1/13912794.err
Error in line 3: S925 S925 83,2
Error in line 7: ZmvF33kT S160 5,9
Error in line 20: Qa9O1rdavZn S481 75,8
Error in line 19: rs8FosKIc S925 14,2
Error in line 21: Qa9O1rdavZn S925 87,4
Error in line 28: Qa9O1rdavZn S486 9,9
Error in line 27: F4WWeFSEih S486 39,9
